# psgc-rs

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: release-to-prod.yml
crates/psgc-api/: Cargo.toml
crates/psgc-api/src/: dto.rs  errors.rs  lib.rs  response.rs  router.rs
crates/psgc-api/src/handlers/: barangay_handlers.rs  city_handlers.rs  district_handlers.rs  mod.rs  municipality_handlers.rs  province_handlers.rs  region_handlers.rs
crates/psgc-application/: Cargo.toml
crates/psgc-application/src/: errors.rs  lib.rs
crates/psgc-application/src/dto/: barangay_dto.rs  city_dto.rs  district_dto.rs  mod.rs  municipality_dto.rs  province_dto.rs  region_dto.rs
crates/psgc-application/src/usecases/: barangay_usecases.rs  city_usecases.rs  district_usecases.rs  mod.rs  municipality_usecases.rs  province_usecases.rs  region_usecases.rs
crates/psgc-domain/: Cargo.toml
crates/psgc-domain/src/: errors.rs  lib.rs
crates/psgc-domain/src/models/: barangay.rs  city.rs  district.rs  mod.rs  municipality.rs  province.rs  region.rs  sub_municipality.rs
crates/psgc-domain/src/repositories/: barangay_repository.rs  city_repository.rs  district_repository.rs  mod.rs  municipality_repository.rs  province_repository.rs  region_repository.rs
crates/psgc-infrastructure/: Cargo.toml
crates/psgc-infrastructure/src/config/: db_config.rs  http_config.rs  mod.rs
crates/psgc-infrastructure/src/database/: generators.rs  helpers.rs  migrator.rs  mod.rs  pool.rs  seeder.rs
crates/psgc-infrastructure/src/database/data/json/: cities.json  municipalites.json  municipalities.json  provinces.json  regions.json
crates/psgc-infrastructure/src/database/migrations/: V1__initial.sql  V2__add_index.sql
crates/psgc-infrastructure/src/database/models/: barangay.rs  city.rs  district.rs  mod.rs  municipality.rs  province.rs  region.rs  sub_municipality.rs
crates/psgc-infrastructure/src/repositories/: barangay_impl.rs  city_impl.rs  district_impl.rs  mod.rs  municipality_impl.rs  province_impl.rs  region_impl.rs
crates/psgc-shared/: Cargo.toml
scripts/dockerfiles/: api.Dockerfile
